...
    return MagnifierGestureDetectorScope(
      axis: const [Axis.horizontal, Axis.vertical],
      child: NotificationListener(
        onNotification: _handleNotification,
        child: PageView.builder(
          // key is expected by test driver
          key: const Key('horizontal-pageview'),
          scrollDirection: Axis.horizontal,
          controller: pageController,
          physics: MagnifierScrollerPhysics(
            gestureSettings: MediaQuery.gestureSettingsOf(context),
            parent: const BouncingScrollPhysics(),
          ),
...
    );
  }

  Widget _buildViewer(AvesEntry mainEntry, {AvesEntry? pageEntry}) {
    return EntryPageView(
      // key is expected by test driver
      key: const Key('image_view'),
      mainEntry: mainEntry,
      pageEntry: pageEntry ?? mainEntry,
      viewerController: viewerController,
      onDisposed: () => widget.onViewDisposed(mainEntry, pageEntry),
    );
  }
...
