...
          },
          child: child,
        );
      },
      child: PageView(
        // key is expected by test driver
        key: const Key('vertical-pageview'),
        scrollDirection: Axis.vertical,
        controller: verticalPager,
        physics: MagnifierScrollerPhysics(
          gestureSettings: MediaQuery.gestureSettingsOf(context),
          parent: SpringyScrollPhysics(
            spring: ViewerVerticalPageView.spring,
...
